--- a/apps/docs/src/pages/components/multi-button.mdx
+++ b/apps/docs/src/pages/components/multi-button.mdx
@@ -11,8 +11,7 @@ import {
 } from "@hitachivantara/uikit-react-icons";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -24,9 +23,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvMultiButton}
@@ -176,5 +173,3 @@ export default function Demo() {
 
 - [`HvButton`](/components/button)
 - [`HvDropDownMenu`](/components/drop-down-menu)
-
-</Page>
