--- a/apps/docs/src/pages/components/scroll-to-vertical.mdx
+++ b/apps/docs/src/pages/components/scroll-to-vertical.mdx
@@ -8,8 +8,7 @@ import {
 } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -22,9 +21,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvScrollToVertical}
@@ -95,5 +92,3 @@ export const getStaticProps = async ({ params }) => {
 ```
 
 - [`HvScrollToHorizontal`](/components/scroll-to-horizontal)
-
-</Page>
