--- a/apps/docs/src/pages/components/skeleton.mdx
+++ b/apps/docs/src/pages/components/skeleton.mdx
@@ -7,8 +7,7 @@ import {
 } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -16,9 +15,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvSkeleton}
@@ -90,5 +87,3 @@ You can use custom CSS animations with the skeleton component by defining your o
 
 - [`HvLoading`](/components/loading)
 - [`HvLoadingContainer`](/components/loading-container)
-
-</Page>
