--- a/apps/docs/src/pages/components/checkbox.mdx
+++ b/apps/docs/src/pages/components/checkbox.mdx
@@ -1,8 +1,7 @@
 import { checkBoxClasses, HvCheckBox } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -10,9 +9,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvCheckBox}
@@ -67,5 +64,3 @@ export default function Demo() {
 - [`HvFormElement`](/components/form-element)
 - [`HvInput`](/components/input)
 - [`HvRadio`](/components/radio)
-
-</Page>
