--- a/apps/docs/src/pages/components/color-picker.mdx
+++ b/apps/docs/src/pages/components/color-picker.mdx
@@ -4,8 +4,7 @@ import {
 } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -17,9 +16,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvColorPicker}
@@ -86,5 +83,3 @@ export default function Demo() {
 ### Related components
 
 - [`HvFormElement`](/components/form-element)
-
-</Page>
