--- a/apps/docs/src/pages/components/dialog.mdx
+++ b/apps/docs/src/pages/components/dialog.mdx
@@ -8,8 +8,7 @@ import {
 } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -17,9 +16,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta: meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 ### Maximum width
 
@@ -365,5 +362,3 @@ const DialogForm = () => (
   </HvGrid>
 );
 ```
-
-</Page>
