--- a/apps/docs/src/pages/components/dot-pagination.mdx
+++ b/apps/docs/src/pages/components/dot-pagination.mdx
@@ -5,8 +5,7 @@ import {
 } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -18,9 +17,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Callout type="info">
   You can use the `HvPagination` component to create a more complete pagination
@@ -123,5 +120,3 @@ export default function Demo() {
 ### Related components
 
 - [`HvPagination`](/components/pagination)
-
-</Page>
