--- a/apps/docs/src/pages/components/dropdown-menu.mdx
+++ b/apps/docs/src/pages/components/dropdown-menu.mdx
@@ -5,8 +5,7 @@ import {
 import { Open, Preview, Save } from "@hitachivantara/uikit-react-icons";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -18,9 +17,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvDropDownMenu}
@@ -98,5 +95,3 @@ export default function Demo() {
   );
 }
 ```
-
-</Page>
