--- a/apps/docs/src/pages/components/empty-state.mdx
+++ b/apps/docs/src/pages/components/empty-state.mdx
@@ -5,8 +5,7 @@ import {
 import { Info } from "@hitachivantara/uikit-react-icons";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -14,9 +13,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvEmptyState}
@@ -56,5 +53,3 @@ You can specify any content as the `message` or `action`. This can be a button, 
   }
 />
 ```
-
-</Page>
