--- a/apps/docs/src/pages/components/form-element.mdx
+++ b/apps/docs/src/pages/components/form-element.mdx
@@ -11,8 +11,7 @@ import {
 import { Fail, Success } from "@hitachivantara/uikit-react-icons";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -32,9 +31,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Callout type="warning">
   You probably don't need to use this component directly. Instead, please check
@@ -141,5 +138,3 @@ The following are ready-to-use form components built with `HvFormElement` and it
 - [`HvSwitch`](/components/switch)
 - [`HvTextArea`](/components/textarea)
 - [`HvTimePicker`](/components/time-picker)
-
-</Page>
