--- a/apps/docs/src/pages/components/input.mdx
+++ b/apps/docs/src/pages/components/input.mdx
@@ -1,8 +1,7 @@
 import { HvInput, inputClasses } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -10,9 +9,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvInput}
@@ -262,5 +259,3 @@ Inputs not using the visual `label` prop should instead provide an `aria-label` 
 - [`HvSelect`](/components/select)
 - [`HvDatePicker`](/components/date-picker)
 - [`HvTimePicker`](/components/time-picker)
-
-</Page>
