--- a/apps/docs/src/pages/components/loading.mdx
+++ b/apps/docs/src/pages/components/loading.mdx
@@ -1,8 +1,7 @@
 import { HvLoading, loadingClasses } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -10,9 +9,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvLoading}
@@ -86,5 +83,3 @@ function LoadingButton({ onClick, children, ...others }: HvButtonProps) {
 
 - [`HvLoadingContainer`](/components/loading-container)
 - [`HvSkeleton`](/components/skeleton)
-
-</Page>
