--- a/apps/docs/src/pages/components/overflow-tooltip.mdx
+++ b/apps/docs/src/pages/components/overflow-tooltip.mdx
@@ -5,8 +5,7 @@ import {
 } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -18,9 +17,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Callout type="info">
   Check out the [`HvTooltip`](/components/tooltip) component for our regular
@@ -43,5 +40,3 @@ export const getStaticProps = async ({ params }) => {
   }}
   decorator={(component) => <div className="max-w-160px">{component}</div>}
 />
-
-</Page>
