--- a/apps/docs/src/pages/components/selection-list.mdx
+++ b/apps/docs/src/pages/components/selection-list.mdx
@@ -6,8 +6,7 @@ import {
 } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -19,9 +18,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvSelectionList}
@@ -91,5 +88,3 @@ export default function Demo() {
 - [`HvSelect`](/components/select)
 - [`HvListContainer`](/components/list-container)
 - [`HvRadioGroup`](/components/radio-group)
-
-</Page>
