--- a/apps/docs/src/pages/components/slider.mdx
+++ b/apps/docs/src/pages/components/slider.mdx
@@ -1,8 +1,7 @@
 import { HvSlider, sliderClasses } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -10,9 +9,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvSlider}
@@ -109,5 +106,3 @@ function getLabel(label: string) {
 ### Related components
 
 - [`HvFormElement`](/components/form-element)
-
-</Page>
