--- a/apps/docs/src/pages/components/snackbar.mdx
+++ b/apps/docs/src/pages/components/snackbar.mdx
@@ -1,8 +1,7 @@
 import { HvSnackbar, snackbarClasses } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -12,9 +11,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvSnackbar}
@@ -232,5 +229,3 @@ export default function Demo() {
 
 - [`HvSnackbarProvider`](/components/snackbar-provider)
 - [`HvBanner`](/components/banner)
-
-</Page>
