--- a/apps/docs/src/pages/components/textarea.mdx
+++ b/apps/docs/src/pages/components/textarea.mdx
@@ -2,8 +2,7 @@ import { Callout } from "nextra/components";
 import { HvTextArea, textAreaClasses } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -11,9 +10,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvTextArea}
@@ -96,5 +93,3 @@ function makeLogLine() {
 
 - [`HvFormElement`](/components/form-element)
 - [`HvInput`](/components/input)
-
-</Page>
