docs: review components' JSDoc

--- a/apps/docs/src/pages/components/radio-group.mdx
+++ b/apps/docs/src/pages/components/radio-group.mdx
@@ -121,6 +121,7 @@ export default function Demo() {
 ### Related components
 
 - [`HvFormElement`](/components/form-element)
+- [`HvSelectionList`](/components/selection-list)
 - [`HvRadio`](/components/radio)
 
 </Page>
