docs: review preview container styles
remove styles added for particular components & inline styles in
components

--- a/apps/docs/src/pages/components/bulk-actions.mdx
+++ b/apps/docs/src/pages/components/bulk-actions.mdx
@@ -38,7 +38,9 @@ export const getStaticProps = async ({ params }) => {
     maxVisibleActions: { defaultValue: 2 },
     semantic: { defaultValue: false },
   }}
-  decorator={(component) => <div className="w-full">{component}</div>}
+  componentProps={{
+    className: "w-full",
+  }}
 />
 
 ### With content
