docs: cleanup, replace components docs page with header

--- a/apps/docs/src/pages/components/app-switcher.mdx
+++ b/apps/docs/src/pages/components/app-switcher.mdx
@@ -6,8 +6,7 @@ import {
 import { Code, LeftAlign } from "@hitachivantara/uikit-react-icons";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -20,9 +19,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvAppSwitcher}
@@ -110,5 +107,3 @@ const getDummyApplicationsList = () => {
   }));
 };
 ```
-
-</Page>
