--- a/apps/docs/src/pages/components/step-navigation.mdx
+++ b/apps/docs/src/pages/components/step-navigation.mdx
@@ -5,8 +5,7 @@ import {
 } from "@hitachivantara/uikit-react-lab";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -18,9 +17,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Callout type="info">
   This is a `lab` component and as such is not considered stable and may be
@@ -143,5 +140,3 @@ You can use the `width` prop to pass an array of custom breakpoints for the step
   />
 </div>
 ```
-
-</Page>
