--- a/apps/docs/src/pages/components/vertical-navigation.mdx
+++ b/apps/docs/src/pages/components/vertical-navigation.mdx
@@ -9,8 +9,7 @@ import {
 import { LogOut, User } from "@hitachivantara/uikit-react-icons";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -23,9 +22,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 ### Usage
 
@@ -455,5 +452,3 @@ const data = [
   { id: "03", label: "Cloud", icon: <Cloud /> },
 ];
 ```
-
-</Page>
