--- a/apps/docs/src/pages/components/action-bar.mdx
+++ b/apps/docs/src/pages/components/action-bar.mdx
@@ -5,8 +5,7 @@ import {
 } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -14,9 +13,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 ### Usage
 
@@ -40,5 +37,3 @@ export const getStaticProps = async ({ params }) => {
   Check the [Card](/components/card) component to see an example of the
   `HvActionBar` in use.
 </Callout>
-
-</Page>
