--- a/apps/docs/src/pages/components/blade.mdx
+++ b/apps/docs/src/pages/components/blade.mdx
@@ -1,8 +1,7 @@
 import { bladeClasses, HvBlade } from "@hitachivantara/uikit-react-lab";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -10,9 +9,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Playground
   Component={HvBlade}
@@ -104,5 +101,3 @@ export default function Demo() {
   );
 }
 ```
-
-</Page>
