--- a/apps/docs/src/pages/components/blades.mdx
+++ b/apps/docs/src/pages/components/blades.mdx
@@ -6,8 +6,7 @@ import {
 } from "@hitachivantara/uikit-react-lab";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -15,9 +14,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Callout type="info">
   This is a `lab` component and as such is not considered stable and may be
@@ -111,5 +108,3 @@ export default function Demo() {
   );
 }
 ```
-
-</Page>
