--- a/apps/docs/src/pages/components/code-editor.mdx
+++ b/apps/docs/src/pages/components/code-editor.mdx
@@ -5,8 +5,7 @@ import {
 } from "@hitachivantara/uikit-react-code-editor";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -18,9 +17,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 ### Usage
 
@@ -229,5 +226,3 @@ export default function Demo() {
   );
 }
 ```
-
-</Page>
