--- a/apps/docs/src/pages/components/drawer.mdx
+++ b/apps/docs/src/pages/components/drawer.mdx
@@ -2,8 +2,7 @@ import { drawerClasses, HvDrawer } from "@hitachivantara/uikit-react-core";
 import { Alert } from "@hitachivantara/uikit-react-icons";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -11,9 +10,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 ```tsx live
 import { useState } from "react";
@@ -174,5 +171,3 @@ export default function Demo() {
   );
 }
 ```
-
-</Page>
