--- a/apps/docs/src/pages/components/grid.mdx
+++ b/apps/docs/src/pages/components/grid.mdx
@@ -1,8 +1,7 @@
 import { Callout } from "nextra/components";
 import { gridClasses, HvGrid } from "@hitachivantara/uikit-react-core";
 
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -10,9 +9,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 <Callout type="info">
   Please refer to the [Layout documentation](/documentation/layout) for more
@@ -161,5 +158,3 @@ export default function Demo() {
 ```
 
 - [`HvSimpleGrid`](/components/simple-grid)
-
-</Page>
