--- a/apps/docs/src/pages/components/query-builder.mdx
+++ b/apps/docs/src/pages/components/query-builder.mdx
@@ -4,8 +4,7 @@ import {
 } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
-import { Description } from "@docs/components/page/Description";
-import { Page } from "@docs/components/page/Page";
+import { Header } from "@docs/components/Header";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
@@ -17,9 +16,7 @@ export const getStaticProps = async ({ params }) => {
   return { props: { ssg: { meta } } };
 };
 
-<Description />
-
-<Page>
+<Header />
 
 ### How to use
 
@@ -717,5 +714,3 @@ const initialQuery: HvQueryBuilderProps["value"] = {
   rules: [{ attribute: "price", operator: "lessThan", value: 10 }],
 };
 ```
-
-</Page>
