--- a/apps/docs/src/pages/components/tag.mdx
+++ b/apps/docs/src/pages/components/tag.mdx
@@ -105,4 +105,4 @@ export default function Demo() {
 
 ### Related components
 
-- [`HvTagsInput`](/components/tagsInput)
+- [`HvTagsInput`](/components/tags-input)
