docs: add Table & useHvTable
docs: add table examples

chore: move server-side example to stackblitz

merge table + table hooks page

--- a/packages/core/src/Table/stories/TableHooks/TableHooks.mdx
+++ b/packages/core/src/Table/stories/TableHooks/TableHooks.mdx
@@ -7,14 +7,14 @@ import * as TableHooksStories from "./TableHooks.stories";
 # Table Hooks
 
 The UI Kit library provides a collection of custom hooks that ease the integration with the [HvTable elements](/docs/guides-table--main) and allows more advanced
-use cases and better data handling. Our custom hooks are built on top of [React Table](https://tanstack.com/table/v8/?from=reactTableV7&original=https://react-table-v7.tanstack.com/)
+use cases and better data handling. Our custom hooks are built on top of [react-table@7](https://react-table-v7-docs.netlify.app)
 which is an "headless" UI utility library to build data tables while retaining control over markup and styles. It consists of a collection of lightweight,
 composable, and extensible custom React hooks.
 
 ## useHv\* Hooks
 
 For further ease, you can use the provided `useHvData` hook that wraps the
-[React Table's `useTable` hook](https://tanstack.com/table/v8/docs/guide/tables?from=reactTableV7&original=https://react-table-v7.tanstack.com/docs/api/useTable)
+[React Table's `useTable` hook](https://react-table-v7-docs.netlify.app/docs/api/useTable)
 and provides the following functionality:
 
 - Ensures the use of the needed core and layout plugins when using any of the UI Kit custom hooks (e.g. adding `useHvPagination` implies the installation of
