--- a/apps/docs/src/pages/examples/tables.mdx
+++ b/apps/docs/src/pages/examples/tables.mdx
@@ -1,20 +1,65 @@
 import { CodeBlock } from "../../components/code/CodeBlock";
 
-import simpleTable from "../../examples/tables/SimpleTable?raw";
-import utils from "../../examples/tables/utils?raw";
+import defaultTableCode from "../../examples/tables/DefaultTable?raw";
+import filteringTableCode from "../../examples/tables/FilteringTable?raw";
+import groupingTableCode from "../../examples/tables/GroupingTable?raw";
+import makeData from "../../examples/tables/makeData?raw";
+import simpleTableCode from "../../examples/tables/SimpleTable?raw";
 
-<CodeBlock
-  title="Simple Table"
-  code={{
-    main: simpleTable,
-    "./utils": utils,
-  }}
-/>
+# Table examples
 
-<CodeBlock
-  title="Simple Table"
-  code={{
-    main: simpleTable,
-    "./utils": utils,
-  }}
-/>
+## Simple table
+
+A simple stateless table leveraging the `columns` configuration.
+
+<CodeBlock code={{ main: simpleTableCode, "./makeData": makeData }} />
+
+## No data table
+
+Custom content, like an `HvEmptyState`, can be displayed inside table cells, by leveraging the native `colSpan` feature.
+
+```tsx live
+<HvTable>
+  <HvTableHead>
+    <HvTableRow>
+      <HvTableHeader>Name</HvTableHeader>
+      <HvTableHeader>Age</HvTableHeader>
+      <HvTableHeader>Role</HvTableHeader>
+    </HvTableRow>
+  </HvTableHead>
+  <HvTableBody>
+    <HvTableRow>
+      <HvTableCell colSpan={100} style={{ height: 96 }}>
+        <HvEmptyState message="No data to display." icon={<Ban />} />
+      </HvTableCell>
+    </HvTableRow>
+  </HvTableBody>
+</HvTable>
+```
+
+## Client-side table
+
+A client-side table supporting the most commonly used table features:
+row sorting, selection, and actions, sticky header and columns, pagination, and bulk actions.
+
+<CodeBlock code={{ main: defaultTableCode, "./makeData": makeData }} />
+
+## Filtering
+
+Row filtering and global filtering can be configured by leveraging the `useHvFilters` and `useHvGlobalFilter` hooks respectively.
+
+<CodeBlock code={{ main: filteringTableCode, "./makeData": makeData }} />
+
+## Grouping
+
+Example of header grouping and row expansion via grouping
+
+<CodeBlock code={{ main: groupingTableCode, "./makeData": makeData }} />
+
+## Other examples
+
+You can find more table examples in our [Stackblitz Tables collection](https://stackblitz.com/orgs/github/lumada-design/collections/ui-kit-tables).
+In there, you'll find various custom table use-cases, such as
+[server-side](https://stackblitz.com/edit/uikit-server-table?file=src%2FApp.tsx),
+[infinite scroll](https://stackblitz.com/edit/uikit-table-server-infinite-scroll?file=src%2FServerSideTable.tsx),
+[sticky column resizing](https://stackblitz.com/edit/github-6jyyr7?file=src%2FApp.tsx), etc.
