chore: add missing imports

--- a/apps/docs/src/pages/components/dashboard.mdx
+++ b/apps/docs/src/pages/components/dashboard.mdx
@@ -51,6 +51,11 @@ Use the buttons to toggle dragging and resizing.
 
 ```tsx live
 import { useState } from "react";
+import {
+  HvBarChart,
+  HvDonutChart,
+  HvLineChart,
+} from "@hitachivantara/uikit-react-viz";
 
 export default function Demo() {
   const [canDrag, setCanDrag] = useState(false);
