--- a/apps/docs/src/pages/documentation/visualizations.mdx
+++ b/apps/docs/src/pages/documentation/visualizations.mdx
@@ -38,7 +38,7 @@ const MyApp = ({ children }) => {
 
 The `HvVizProvider` only accepts a `children` and doesn't need any extra configuration to work.
 
-ata
+## Data
 
 The visualizations `data` can have one of the following formats:
 
