docs(TagsInput): resizable docs
update docs to reflect that resizable is opt-in

--- a/apps/docs/src/pages/components/tags-input.mdx
+++ b/apps/docs/src/pages/components/tags-input.mdx
@@ -21,6 +21,7 @@ export const getStaticProps = async ({ params }) => {
     label: { defaultValue: "Enter your tags" },
     description: { defaultValue: "This is where you enter your tags" },
     multiline: { defaultValue: false },
+    resizable: { defaultValue: false },
     readOnly: { defaultValue: false },
     disabled: { defaultValue: false },
   }}
