chore: move charts guide to charts section

--- a/apps/docs/src/pages/charts/get-started.mdx
+++ b/apps/docs/src/pages/charts/get-started.mdx
@@ -13,6 +13,11 @@ To use the visualizations components, you need to install the `@hitachivantara/u
 npm install @hitachivantara/uikit-react-viz
 ```
 
+## Apache ECharts
+
+UI Kit's charts are based on the [Apache ECharts](https://echarts.apache.org/en/index.html) library.
+If you need any feature that's not covered by the UI Kit charts documentation, please refer to the [Apache ECharts documentation](https://echarts.apache.org/en/option.html#title).
+
 ## Provider
 
 Before using any of the UI Kit visualizations, it's necessary to add the `HvVizProvider` component to your application.
