docs: add `Heatmap` documentation

--- a/apps/docs/src/pages/examples/charts.mdx
+++ b/apps/docs/src/pages/examples/charts.mdx
@@ -1,5 +1,6 @@
 import { CodeBlock } from "../../components/code/CodeBlock";
 
+import donutChartTotal from "../../examples/charts/DonutChartTotal?raw";
 import lineChartStreamingCode from "../../examples/charts/LineChartStreaming?raw";
 
 # Charts examples
@@ -9,3 +10,9 @@ import lineChartStreamingCode from "../../examples/charts/LineChartStreaming?raw
 A line chart with regular interval updates.
 
 <CodeBlock code={{ main: lineChartStreamingCode }} />
+
+## Donut chart with total inside
+
+A donut chart that shows the total in the center
+
+<CodeBlock code={{ main: donutChartTotal }} />
