docs: add `TreeMap` documentation

--- a/apps/docs/src/pages/charts/get-started.mdx
+++ b/apps/docs/src/pages/charts/get-started.mdx
@@ -1,8 +1,9 @@
 import { Callout } from "nextra/components";
 
 <Callout type="info">
-  For documentation on the visualizations components, please refer to the
-  [charts](http://localhost:3000/charts/bar-chart) page.
+  For more examples of charts please check out the UI Kit's Stackblitz [charts
+  examples](https://stackblitz.com/orgs/github/lumada-design/collections/ui-kit-charts)
+  page.
 </Callout>
 
 ## Installation
