chore: make default button radius value on the docs `full`

--- a/apps/docs/src/pages/components/button.mdx
+++ b/apps/docs/src/pages/components/button.mdx
@@ -29,7 +29,7 @@ export const getStaticProps = async ({ params }) => {
     },
     radius: {
       type: "slider",
-      defaultValue: "base",
+      defaultValue: "full",
     },
     disabled: {
       defaultValue: false,
