docs: update unocss classes
use semantic spacing units & color tokens directly

--- a/apps/docs/src/pages/components/tooltip.mdx
+++ b/apps/docs/src/pages/components/tooltip.mdx
@@ -118,7 +118,7 @@ A Tooltip will grow to the size of its content. Keep in mind that the Tooltip `t
     title={
       <div className={"flex flex-col gap-xs"}>
         <HvTypography variant="label">January</HvTypography>
-        <div className="border-b-[3px] border-[var(--uikit-colors-atmo2)] m-[xs] mx-[-16px]" />
+        <div className="border-b-3px border-atmo2 m-xs -mx-sm" />
         {[
           ["Sales", "52,000 units"],
           ["Profit", "50%"],
