chore: review after feedback

--- a/apps/docs/src/pages/examples/inputs.mdx
+++ b/apps/docs/src/pages/examples/inputs.mdx
@@ -11,17 +11,17 @@ import tagsSuggestions from "../../examples/inputs/TagsSuggestions?raw";
 A phone input that includes a dropdown to select the country code. The input is automatically formatted based on the selected country code.
 In the example the formatting function is always the same and formats the number as `XX XXX XX XX`.
 
-<CodeBlock code={{ main: phoneInput }} />
+<CodeBlock code={{ main: phoneInput }} layout="expandable" />
 
 ## Tags dropdown input
 
 A dropdown input that allows users to select multiple tags. The selected tags are displayed in the input and removed from the suggestions list
 and the user can remove any tags previously selected. The tags container in the dropdown input will keep scroll to the end to show the last added tag.
 
-<CodeBlock code={{ main: tagsDropdown }} />
+<CodeBlock code={{ main: tagsDropdown }} layout="expandable" />
 
 ## Tags input with suggestions
 
 An input that allows users to select tags from a list of suggestions or by typing them. Tags are entered when the users presses the `Comma` key.
 
-<CodeBlock code={{ main: tagsSuggestions }} />
+<CodeBlock code={{ main: tagsSuggestions }} layout="expandable" />
