chore: remove adornments if in "read only" mode

--- a/apps/docs/src/pages/components/number-input.mdx
+++ b/apps/docs/src/pages/components/number-input.mdx
@@ -29,6 +29,7 @@ export const getStaticProps = async ({ params }) => {
     readOnly: { defaultValue: false },
     disabled: { defaultValue: false },
   }}
+  decorator={(c) => <div className="w-full">{c}</div>}
 />
 
 <br />
