chore: improve inputs examples page layout

--- a/apps/docs/src/pages/examples/inputs.mdx
+++ b/apps/docs/src/pages/examples/inputs.mdx
@@ -7,9 +7,11 @@ import tagsSuggestions from "../../examples/inputs/TagsSuggestions?raw";
 
 # Inputs examples
 
-<div className="w-full grid [grid-template-columns:repeat(auto-fit,minmax(320px,1fr))] gap-md">
-  <CodeBlock code={{ main: dropdownPrefix }} layout="popup" />
-  <CodeBlock code={{ main: copyButton }} layout="popup" />
-  <CodeBlock code={{ main: tagsDropdown }} layout="popup" />
-  <CodeBlock code={{ main: tagsSuggestions }} layout="popup" />
+<div className="overflow-hidden">
+  <div className="w-101% grid  divide-border [grid-template-columns:repeat(auto-fit,minmax(360px,1fr))] -mt-px -mb-px">
+    <CodeBlock code={{ main: dropdownPrefix }} layout="popup" />
+    <CodeBlock code={{ main: copyButton }} layout="popup" />
+    <CodeBlock code={{ main: tagsDropdown }} layout="popup" />
+    <CodeBlock code={{ main: tagsSuggestions }} layout="popup" />
+  </div>
 </div>
