chore: review after feedback

--- a/apps/docs/src/pages/components/number-input.mdx
+++ b/apps/docs/src/pages/components/number-input.mdx
@@ -1,10 +1,5 @@
 import { Callout } from "nextra/components";
-import {
-  HvBannerContent,
-  HvNumberInput,
-  HvTypography,
-  inputClasses,
-} from "@hitachivantara/uikit-react-core";
+import { HvNumberInput, inputClasses } from "@hitachivantara/uikit-react-core";
 
 import { getComponentData } from "../../utils/component";
 
