docs(Input): add inline editable value

--- a/apps/docs/src/pages/examples/inputs.mdx
+++ b/apps/docs/src/pages/examples/inputs.mdx
@@ -2,6 +2,7 @@ import { CodeBlock } from "../../components/code/CodeBlock";
 
 import copyButton from "../../examples/inputs/CopyButton?raw";
 import dropdownPrefix from "../../examples/inputs/DropdownPrefix?raw";
+import editableValue from "../../examples/inputs/EditableInput?raw";
 import tagsDropdown from "../../examples/inputs/TagsDropdown?raw";
 import tagsSuggestions from "../../examples/inputs/TagsSuggestions?raw";
 
@@ -13,5 +14,6 @@ import tagsSuggestions from "../../examples/inputs/TagsSuggestions?raw";
     <CodeBlock code={{ main: copyButton }} layout="popup" />
     <CodeBlock code={{ main: tagsDropdown }} layout="popup" />
     <CodeBlock code={{ main: tagsSuggestions }} layout="popup" />
+    <CodeBlock code={{ main: editableValue }} layout="popup" />
   </div>
 </div>
